[package]
name = "nexus-dvd"
description = "DVD Icon addon for GW2 Nexus"
version = "0.8.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]
name = "dvd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winres]
LegalCopyright = "Copyright © 2023-2024"


[dependencies]
arcdps-imgui = "0.8.0"
atomic_float = "0.1.0"
once_cell = "1.18.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_System_SystemServices"
]

[dependencies.nexus-rs]
git = "https://github.com/belst/raidcore_bindings-rs"
rev = "423e14136e2adec56ba392e2db4e0e61f8507de5"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"
