[package]
name = "nexus-dvd"
description = "DVD Icon (Bouncy)"
version = "0.10.0"
edition = "2021"
authors = ["belst"]

[lib]
crate-type = ["cdylib"]
name = "dvd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = "0.4.21"
once_cell = "1.18.0"
rand = { version = "0.8.5", features = ["min_const_gen"] }

[dependencies.windows]
version = "*"
features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
]

[dependencies.nexus]
git = "https://github.com/Zerthox/nexus-rs"
features = ["log"]

